# Blancco_Test

./: .gitignore  Blancco_Test.sln  README.md  package-lock.json  package.json
Blancco_Test/: Blancco_Test.njsproj  README.md  SimpleServer.js  package.json
QtBlanccoTest/: CMakeLists.txt  main.cpp
QtBlanccoTestProjectFolder/: CMakeLists.txt  Main.qml  main.cpp  networkmanager.cpp  networkmanager.h  timerbutton.cpp  timerbutton.h
